# kohaku-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.MD  main.py  mypy.ini  pyproject.toml
app/: bot.py  web_api.py
app/adapters/: bot.py  database.py
app/api/: auth.py
app/api/osu/: auth.py  models.py
app/bot/: auth_view.py  kohaku_bot.py
app/common/: clients.py  errors.py  lifecycle.py  logger.py  session_backend.py  session_verifier.py  settings.py  typing.py
app/repositories/: token.py  users.py
app/services/: users.py
database/: base.sql
scripts/: bootstrap.sh  run-kohaku.sh  run_api.sh
